--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 ---
-layout: home
-background: '/img/ER-archaeologist.jpg'
+layout: page
+background: '/img/MissionSanVicenteFerrer.jpg'
 ---
+
+![Ely Rareshide](/img/ER.jpg)
+
+I am a historical archaeologist working on my PhD in the Department of Anthropology at the University of California, Santa Barbara. My overarching research interest is to understand when, why, and how people decide to reject, accept, or innovate as they navigate new intercultural and power dynamics, particularly in the context of colonialism. My current research focuses on the interactions between the colonial Dominican friars and Paipai at Mission San Vicente Ferrer in Baja California, Mexico.
